fix: same alignment for drawer header as content (#1000)

--- a/source/sass/component/_drawer.scss
+++ b/source/sass/component/_drawer.scss
@@ -119,7 +119,7 @@ $drawer-duotone-secondary-background-color: var(--c-drawer-duotone-secondary-bac
 }
 
 .c-drawer__header {
-    padding: calc(#{$base} * 1.5) calc(#{$base} * 3);
+    padding: calc(#{$base} * 1) calc(#{$base} * 2);
     display: flex;
     flex-direction: column;
     align-items: flex-end;
